Optimize world dump performance
* Optimize world dump serialization

* Report dump performance timings

* Bump version to 0.5.0

* Update project version

* Document dump performance improvements